duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_on_error_reduce.mly
%token A B
%start<unit> main
%on_error_reduce FOO (* does not exist *)

%%

main: A B {}
