duniverse/menhirLib.20200211/test/static/bad/unknown_symbol_in_on_error_reduce.exp
File "unknown_symbol_in_on_error_reduce.mly", line 3, characters 17-20:
Error: FOO is undefined.
